# busy_beaver

./: Cargo.toml  readme.md
src/: arg_handler.rs  lib.rs  main.rs  main_gunnar-Inspiron-7590_Jun-27-073317-2025_Conflict.rs  reporter.rs  result_worker.rs  struct_sizes.rs  test_bb5.rs  test_machines.rs  test_run_deciders.rs  test_single_deciders.rs
