[package]
name = "busy_beaver"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16"
num-format = "0.4"
rand = "0.9"
# bb_challenge = { path = "../bb_challenge", features = ["bb_debug"] }
bb_challenge = { path = "../bb_challenge" }
bb_challenge_work = { path = "../bb_challenge_work" }


[features]
# default = ["debug"]
debug = []

# [[bench]]
# name = "bench_busy_beaver"
# path = "benches/benchmarks-criterion.rs"
# harness = false
